<resources>
    <string name="app_name">ProjectPKL</string>
    <string name="allowed_input_char_name">0123456789qwertzui opasdfghjklyxcvbnmABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="allowed_input_char_email">0123456789qwertzuiopasdfghjklyxcvbnm@-_ABCDEFGHIJKLMNOPQRSTUVWXYZ.</string>
    <string name="daftar"><u>Daftar disini</u></string>
    <string name="lupa_password"><u>Lupa Kata Sandi ?</u></string>
    <string name="facebook_app_id">1234567890</string>
    <string name="textEmail">Email/Username</string>
    <string name="textPassword">Password</string>
    <string name="textLogin">Login</string>
    <string name="title_home">Home</string>
    <string name="title_setting">Setting</string>
    <string name="title_profile">Profile</string>
    <string name="action_search">Search</string>
    <string name="text_Logout">Logout</string>

<!--     String Navigation-->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>